
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1478] Fixed @SELECT binding
- [#MODX-1474] Fixed bug with multiple list-boxes
- [#MODX-1476] Fixed bug with TV default values with non-inherit tvs, also bug with radios/checkboxes and set to default
- [#MODX-1479] Fixed bug with duplicate DOM ids in User Group tree
- [#MODX-1480] Fixed bug with wrong permission reference in property set remove processor
- Added emptyText to local and property grids
- [#MODX-1477] Added emptyText config param with default 'No data to display' message to empty MODx grids
- documentObject was not getting set from cached Resources.
- Added inline help that loads official MODx documentation in a window
- [#MODX-900] Fixed erroneous text on site_status setting description
- Added (Inherited Value) flag to TVs that are inheriting their value
- Added category titles to TV editing panel
- [#MODX-1354], [#MODX-1475] Fixed @INHERIT and other bindings in TV inputs
- Fixed bugs with dirty status not firing for certain TV input types 
- Fixed CSS for login page
- Fixed issue where default connection charset was not persisting in setup for upgrades
- CSS tweak to get windows working properly
- Major styling updates (thanks lossendae!)
- [#MODX-1473] Fixed bug with modUser and modUserProfile PK's getting mixed, causing errors if PKs for each object were different
- Added city field to user UI
- Optimizations to Resource panel
- [#MODX-1466] Made "back" from Access Policy edit redirect to Access Controls page, made Access Controls tabs stateful
- [#MODX-1471] Added scrollOffset: 0 to grids to hide empty space on right side
- [#MODX-1469] Fixed dir handling in setup
- [#MODX-1388] Updated documentation for modX.getTree and modX.getChildIds